<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingBottom="8pt"
                android:shadowColor="@color/colorPrimaryDark"
                android:shadowDx="8"
                android:shadowDy="8"
                android:shadowRadius="10"
                android:text="@string/new_user"
                android:textAlignment="center"
                android:textColor="#406090"
                android:textSize="20dp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:touchscreenBlocksFocus="false">

                <AutoCompleteTextView
                    android:id="@+id/add_user_firstName"
                    style="@android:style/Widget.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/label_firstName"
                    android:inputType="text"
                    android:maxLines="1"
                    android:shadowRadius="12"
                    android:imeOptions="actionNext"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:touchscreenBlocksFocus="false">

                <AutoCompleteTextView
                    android:id="@+id/add_user_lastName"
                    style="@android:style/Widget.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/label_lastName"
                    android:inputType="text"
                    android:maxLines="1"
                    android:shadowRadius="12"
                    android:imeOptions="actionNext"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:touchscreenBlocksFocus="false">

                <AutoCompleteTextView
                    android:id="@+id/add_user_email"
                    style="@android:style/Widget.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/label_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:shadowRadius="12"
                    android:imeOptions="actionNext" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:touchscreenBlocksFocus="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTintMode="src_atop">

                <AutoCompleteTextView
                    android:id="@+id/add_user_password"
                    style="@android:style/Widget.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:autoText="false"
                    android:hint="@string/label_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:shadowRadius="12"
                    android:imeOptions="actionNext" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:touchscreenBlocksFocus="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTintMode="src_atop">

                <AutoCompleteTextView
                    android:id="@+id/add_user_repeatPassword"
                    style="@android:style/Widget.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/label_repeatPassword"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:shadowRadius="12"
                    android:imeOptions="actionNext"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/add_user_checkBoxRoleEmployee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/employee"
                    android:imeOptions="actionNext"/>

                <CheckBox
                    android:id="@+id/add_user_checkBoxRoleAdministrator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Administrator"
                    android:imeOptions="actionNext"/>

                <CheckBox
                    android:id="@+id/add_user_checkBoxRoleMechanic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mechanic"
                    android:imeOptions="actionNext"/>
            </LinearLayout>

            <Button
                android:id="@+id/add_user_button_addUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_user" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>