...
    <string name="kw">Kw</string>
    <string name="chassis_number">Chassis number</string>
    <string name="registration_number">registration_number</string>
    <string name="registration_date">Registration date</string>
    <string name="registration_expired">Registration expired</string>
    <string name="average_fuel_consumption">Average fuel consumption</string>
    <string name="add_user">Add user</string>
    <string name="new_user">New user</string>
    <string name="label_password">Password</string>
    <string name="label_repeatPassword">Repeat password</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="employee">Employee</string>
    <string name="Administrator">Administrator</string>
...
